{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 25,
  "lineage": "50cdc339-58d1-6c1d-1644-108b79393de3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b0d888e2d2c82c66",
            "domain": "vpc",
            "id": "eipalloc-08c4d6ae9fd15dc35",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0526b8dc928470bb9",
            "private_dns": "ip-10-0-0-154.eu-west-3.compute.internal",
            "private_ip": "10.0.0.154",
            "public_dns": "ec2-15-237-91-70.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.91.70",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Nat Elastic Ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:610204163933:loadbalancer/web-loadbalancer",
            "availability_zones": [
              "eu-west-3a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "web-loadbalancer-236360383.eu-west-3.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "web-loadbalancer",
            "idle_timeout": 60,
            "instances": [
              "i-0b6cc4425fa18d7e9"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "web-loadbalancer",
            "security_groups": [
              "sg-04beb6451f54bfbfb"
            ],
            "source_security_group": "610204163933/web_loadbalancer",
            "source_security_group_id": "sg-04beb6451f54bfbfb",
            "subnets": [
              "subnet-0bd0a45b33c3b3e3b"
            ],
            "tags": {
              "Name": "Web load balancer"
            },
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_security_group.loadbalancer",
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e9073d7ac75f4491",
            "arn": "arn:aws:ec2:eu-west-3:610204163933:instance/i-04a3d4081f130cb02",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a3d4081f130cb02",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02aca7b4a6afd617d",
            "private_dns": "ip-10-0-0-22.eu-west-3.compute.internal",
            "private_ip": "10.0.0.22",
            "public_dns": "ec2-15-237-95-215.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.95.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0829c61b7459513c2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0bd0a45b33c3b3e3b",
            "tags": {
              "Name": "VPC Bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02861a5fdeca86adf"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00373688fb7818d45",
            "arn": "arn:aws:ec2:eu-west-3:610204163933:instance/i-0b6cc4425fa18d7e9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b6cc4425fa18d7e9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06e03f28a81ba45d1",
            "private_dns": "ip-10-0-0-74.eu-west-3.compute.internal",
            "private_ip": "10.0.0.74",
            "public_dns": "ec2-35-180-209-205.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.209.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05466ac91c90d313a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0bd0a45b33c3b3e3b",
            "tags": {
              "Name": "Web Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-005ef5cf7afd3ba96"
            ]
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig-main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:610204163933:internet-gateway/igw-05faa56b4d519dff7",
            "id": "igw-05faa56b4d519dff7",
            "owner_id": "610204163933",
            "tags": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-017717aea21460a45"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ng-main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c4d6ae9fd15dc35",
            "id": "nat-0be5adf2b7d9a3e32",
            "network_interface_id": "eni-0526b8dc928470bb9",
            "private_ip": "10.0.0.154",
            "public_ip": "15.237.91.70",
            "subnet_id": "subnet-0bd0a45b33c3b3e3b",
            "tags": {
              "Name": "Nat Gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-030a3ba6d480f149e",
            "owner_id": "610204163933",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private Routetable"
            },
            "vpc_id": "vpc-017717aea21460a45"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-031d1d5bbeee08611",
            "owner_id": "610204163933",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05faa56b4d519dff7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Routetable"
            },
            "vpc_id": "vpc-017717aea21460a45"
          },
          "dependencies": [
            "aws_internet_gateway.ig-main",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08eea4b9a8b3bd80e",
            "route_table_id": "rtb-030a3ba6d480f149e",
            "subnet_id": "subnet-0088318577b45f71d"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3327f29e71850ab",
            "route_table_id": "rtb-030a3ba6d480f149e",
            "subnet_id": "subnet-0d6dbae03f7bfdfa8"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d715e259ce08183",
            "route_table_id": "rtb-031d1d5bbeee08611",
            "subnet_id": "subnet-0bd0a45b33c3b3e3b"
          },
          "dependencies": [
            "aws_internet_gateway.ig-main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:610204163933:security-group/sg-02861a5fdeca86adf",
            "description": "Can access both subnets",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-02861a5fdeca86adf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_bastion",
            "name_prefix": "",
            "owner_id": "610204163933",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NATSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-017717aea21460a45"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:610204163933:security-group/sg-0a98f80fdb6f9b316",
            "description": "Allow incoming database connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0a98f80fdb6f9b316",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-005ef5cf7afd3ba96"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "vpc_db",
            "name_prefix": "",
            "owner_id": "610204163933",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DBServerSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-017717aea21460a45"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loadbalancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:610204163933:security-group/sg-04beb6451f54bfbfb",
            "description": "Security group for load-balancers",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-005ef5cf7afd3ba96"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-005ef5cf7afd3ba96"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-04beb6451f54bfbfb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP traffic from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTPS traffic from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "web_loadbalancer",
            "name_prefix": "",
            "owner_id": "610204163933",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LoadBalancerSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-017717aea21460a45"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:610204163933:security-group/sg-005ef5cf7afd3ba96",
            "description": "Allow incoming HTTP connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-005ef5cf7afd3ba96",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_web",
            "name_prefix": "",
            "owner_id": "610204163933",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebServerSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-017717aea21460a45"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:610204163933:subnet/subnet-0088318577b45f71d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0088318577b45f71d",
            "map_public_ip_on_launch": false,
            "owner_id": "610204163933",
            "tags": {
              "Name": "test-test-private-eu-west-3a"
            },
            "vpc_id": "vpc-017717aea21460a45"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:610204163933:subnet/subnet-0d6dbae03f7bfdfa8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0d6dbae03f7bfdfa8",
            "map_public_ip_on_launch": false,
            "owner_id": "610204163933",
            "tags": {
              "Name": "test-test-private-eu-west-3b"
            },
            "vpc_id": "vpc-017717aea21460a45"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:610204163933:subnet/subnet-0bd0a45b33c3b3e3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0bd0a45b33c3b3e3b",
            "map_public_ip_on_launch": false,
            "owner_id": "610204163933",
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-017717aea21460a45"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:610204163933:vpc/vpc-017717aea21460a45",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a53c8e22be94d277",
            "default_route_table_id": "rtb-0ab5a7e572adc8f94",
            "default_security_group_id": "sg-07dcee2ea4d3fe047",
            "dhcp_options_id": "dopt-6025cd08",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-017717aea21460a45",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ab5a7e572adc8f94",
            "owner_id": "610204163933",
            "tags": {
              "Name": "terraform-aws-vpc"
            }
          }
        }
      ]
    }
  ]
}